Fix: dark mode

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -11,12 +11,12 @@
     *::-webkit-scrollbar-thumb { background-color: var(--secondary); border-radius: 11px; border: 3px solid var(--primary); }
     body { font-family: 'Inter', ui-sans-serif, system-ui,-apple-system,BlinkMacSystemFont,sans-serif !important; }
     .pre-font { font-family: 'Inconsolata','Source Code Pro', monospace !important; }
-    nav a { @apply hover:text-slate-700 dark:hover:text-slate-300 text-sm font-light tracking-wide }
-    .nav-heading { @apply font-semibold text-gray-600 cursor-default text-xs tracking-wider dark:text-slate-600/90 uppercase bg-slate-200 p-4 sm:px-4 sm:py-2 sm:mr-4 rounded-sm sm:mt-8 }
+    nav a { @apply hover:text-slate-700 dark:hover:text-dark-300 text-sm font-light tracking-wide }
+    .nav-heading { @apply font-semibold text-gray-600 dark:text-dark-400 cursor-default text-xs tracking-wider uppercase bg-slate-200 dark:bg-dark-800 p-4 sm:px-4 sm:py-2 sm:mr-4 rounded-sm sm:mt-8 }
     .dot { @apply border border-slate-300 inline-block h-2 w-2 rounded-full mr-2 ml-3 rtl:ml-2 }
     .active .dot { @apply border border-indigo-400 bg-indigo-400 }
-    .active { @apply  border-l border-l-indigo-600 bg-gradient-to-r from-indigo-50 to-white }
-    .active a { @apply text-indigo-500 py-1.5 }
+    .active { @apply  border-l-2 border-l-indigo-600 bg-gradient-to-r from-indigo-50 to-white dark:from-dark-600 dark:bg-dark-600 }
+    .active a { @apply text-indigo-500 py-1.5 dark:text-indigo-200 }
     .page-title { @apply font-light tracking-wide text-3xl text-slate-800  mb-6 dark:text-slate-500 }
     .content-area p { @apply leading-8 text-slate-600 dark:text-slate-400 mb-7 }
     .content-area a { @apply text-indigo-500 hover:text-indigo-700 }
